--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -5,5 +5,9 @@ layout: page
 {%- assign items = site.data[site.metadata] -%}
 <div class="row">
   <div class="col-md-8">
-
+This repository is a partial representation of the Lost Tacoma collection, constituting 116 of the total 560 blueprints across 26 locations. The technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.
+<br>
+The scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are less than ideal. The technical drawings have been reformatted and restored for legibility.
+<br>
+The work was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room. To view slightly larger versions of these blueprints, please visit the library's image archive here.
 </div>
