--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -5,16 +5,11 @@ layout: page
 {%- assign items = site.data[site.metadata] -%}
 <div class="row">
   <div class="col-md-8">
-<<<<<<< HEAD
+<p>
 This collection is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection, constituting 116 of the total 560 blueprints across 26 locations. The technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.
 <p>
-The scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are less than ideal. The technical drawings have been reformatted and restored for legibility.
+The scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal. The technical drawings have been reformatted and restored for legibility.
 <p>
-Visual restoration, arrangement and description was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room. Please visit the library's image archive here.
-=======
-
-    {% include index/description.html %}
-    {% include index/carousel.html title="Sample Items" height="300" %}
-
->>>>>>> parent of ce4df04... Merge remote-tracking branch 'origin/main' into main
+Restoration, arrangement and description was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room. Please visit the library's image archive here.
+<p>
 </div>
