--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -3,13 +3,40 @@
 layout: page
 ---
 {%- assign items = site.data[site.metadata] -%}
+<script src="https://unpkg.com/scroll-scene-element/dist/scroll-scene-element.js" type="module"></script>
 <div class="row">
   <div class="col-md-8">
-<p>
-This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection, constituting 116 of the total 560 blueprints across 26 locations. The technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.
-<p>
-The scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal. The technical drawings have been reformatted and restored for legibility.
-<p>
-Restoration, arrangement and description was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room. Please visit the library's image archive here.
-<p>
+</head>
+<body>
+  <h1>About</h1>
+  <div class="intro-text">
+    <p>
+      This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,
+    </p>
+    <p>
+     constituting 116 of the total 560 blueprints across 26 locations.
+    </p>
+  </div>
+
+<div class="scrollytelling-container">
+	<scroll-scene>
+		<h2>Scene 1</h2>
+		<p>The technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.</p>
+	</scroll-scene>
+	<scroll-scene>
+		<h2>Scene 2</h2>
+		<p>The scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal.</p>
+	</scroll-scene>
+	<scroll-scene>
+		<h2>Scene 3</h2>
+		<p>The technical drawings have been reformatted and restored for legibility.</p>
+	</scroll-scene>
+  <scroll-scene>
+		<h2>Scene 4</h2>
+		<p>Restoration, arrangement and description was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room.</p>
+	</scroll-scene>
+	<scroll-scene>
+		<h2>Scene 5</h2>
+		<p>Please visit the library's image archive here.</p>
+	</scroll-scene>
 </div>
