--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -1,5 +1,5 @@
 ---
-# Default home page with boxes providing collection stats
+Default home page with boxes providing collection stats
 layout: page
 ---
 {%- assign items = site.data[site.metadata] -%}
