--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -66,8 +66,8 @@ layout: page
     .scroller-items > scroll-scene {
       align-items: center;
       font-family: monospace;
-      background-color: lightyellow;
-      color: grey;
+      background-color: white;
+      color: white;
       display: flex;
       font-size: 1.25rem;
       text-align: center;
@@ -123,7 +123,7 @@ layout: page
     }
 
     .midpoint {
-      border-top: 2px dotted black;
+      border-top: 0px dotted white;
       height: 0px;
       left: 0px;
       position: fixed;
@@ -155,7 +155,7 @@ layout: page
     scenesContainer.addEventListener('scroll-scene-enter', ({ detail }) => {
       const index = scenes.indexOf(detail.element);
       detail.element.classList.add('active');
-      graphic.textContent = 'Scene Graphic ' + (index + 1);
+      graphic.textContent = '';
     });
 
     scenesContainer.addEventListener('scroll-scene-exit', ({ detail }) => {
@@ -173,9 +173,7 @@ layout: page
   <h1>About</h1>
   <div class="intro-text">
     <p>
-    This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,
-    <p>
-constituting 116 of the total 560 blueprints across 26 locations.
+    This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection, constituting 116 of the total 560 blueprints across 26 locations.
     </p>
   </div>
 
