--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -67,7 +67,7 @@ layout: page
       align-items: center;
       font-family: monospace;
       background-color: white;
-      color: white;
+      color: black;
       display: flex;
       font-size: 1.25rem;
       text-align: center;
@@ -80,7 +80,7 @@ layout: page
     }
 
     .graphic {
-      background-color: hsla(0, 0%, 83%, 75%);
+      background-color: white(0, 0%, 0%, 0%);
       align-items: center;
       display: flex;
       justify-content: center;
