--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -65,7 +65,7 @@ layout: page
 
     .scroller-items > scroll-scene {
       align-items: center;
-      font-family: monospace;
+      font-family: roboto;
       background-color: white;
       color: black;
       display: flex;
@@ -76,7 +76,7 @@ layout: page
     }
 
     .scroller-items > scroll-scene.active {
-      background-color: paleturquoise;
+      background-color: white;
     }
 
     .graphic {
