--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -69,9 +69,9 @@ layout: page
       background-color: white;
       color: black;
       display: flex;
-      font-size: 1.25rem;
-      text-align: center;
-      justify-content: center;
+      font-size: 1.50rem;
+      text-align: left;
+      justify-content: left;
       width: 100%;
     }
 
@@ -187,6 +187,11 @@ layout: page
     </div>
     <div class="scroller-visual scroller-container__column">
       <div class="graphic sticky-top"></div>
+      <scroll-scene>/objects/coe_abattoire_17..jpeg</scroll-scene>
+      <scroll-scene>/objects/coe_buffelenapartments_01.jpeg</scroll-scene>
+      <scroll-scene>/objects/coe_pacificrefridgeration_17s3.jpeg</scroll-scene>
+      <scroll-scene>/objects/coe_talmud_torah_12.jpeg</scroll-scene>
+      <scroll-scene> </scroll-scene>
     </div>
   </scroll-scene>
 
