--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -64,7 +64,7 @@ layout: page
     }
 
     .scroller-items > scroll-scene {
-      align-items: center;
+      align-items: left;
       font-family: roboto;
       background-color: white;
       color: black;
@@ -187,10 +187,10 @@ layout: page
     </div>
     <div class="scroller-visual scroller-container__column">
       <div class="graphic sticky-top"></div>
-      <scroll-scene>/objects/coe_abattoire_17..jpeg</scroll-scene>
-      <scroll-scene>/objects/coe_buffelenapartments_01.jpeg</scroll-scene>
-      <scroll-scene>/objects/coe_pacificrefridgeration_17s3.jpeg</scroll-scene>
-      <scroll-scene>/objects/coe_talmud_torah_12.jpeg</scroll-scene>
+      <scroll-scene><img src=”(https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg)”></scroll-scene>
+      <scroll-scene><img src=”(https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg)”></scroll-scene>
+      <scroll-scene><img src=”(https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg)”></scroll-scene>
+      <scroll-scene><img src=”(https://aweymo.github.io/losttacoma/objects/coe_abattoire_17.jpeg)”></scroll-scene>
       <scroll-scene> </scroll-scene>
     </div>
   </scroll-scene>
