--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -187,10 +187,10 @@ layout: page
     </div>
     <div class="scroller-visual scroller-container__column">
       <div class="graphic sticky-top"></div>
-      <scroll-scene><img src=”https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg”></scroll-scene>
-      <scroll-scene><img src=”https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg”></scroll-scene>
-      <scroll-scene><img src=”https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg”></scroll-scene>
-      <scroll-scene><img src=”https://aweymo.github.io/losttacoma/objects/coe_abattoire_17.jpeg”></scroll-scene>
+      <scroll-scene><img src=”/objects/coe_abattoire_17.jpeg”></scroll-scene>
+      <scroll-scene><img src=”/objects/coe_buffelenapartments_01.jpeg”></scroll-scene>
+      <scroll-scene><img src=”/objects/coe_pacificrefridgeration_17s3.jpeg”></scroll-scene>
+      <scroll-scene><img src=”/objects/coe_talmud_torah_12.jpeg”></scroll-scene>
       <scroll-scene> </scroll-scene>
     </div>
   </scroll-scene>
