--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -186,11 +186,15 @@ layout: page
       <scroll-scene>Please visit the library's image archive here.</scroll-scene>
     </div>
     <div class="scroller-visual scroller-container__column">
-      <div class="graphic sticky-top"></div>
-      <scroll-scene><img src=”/objects/coe_abattoire_17.jpeg”></scroll-scene>
-      <scroll-scene><img src=”/objects/coe_buffelenapartments_01.jpeg”></scroll-scene>
-      <scroll-scene><img src=”/objects/coe_pacificrefridgeration_17s3.jpeg”></scroll-scene>
-      <scroll-scene><img src=”/objects/coe_talmud_torah_12.jpeg”></scroll-scene>
+      <div class="graphic sticky-top"><<img src=”/objects/coe_abattoire_17.jpeg”>/div>
+      <div class="graphic sticky-top"><<img src=”/objects/coe_buffelenapartments_01.jpeg”>/div>
+      <div class="graphic sticky-top"><<img src=”/objects/coe_pacificrefridgeration_17s3.jpeg”>/div>
+      <div class="graphic sticky-top"><<img src=”/objects/coe_talmud_torah_12.jpeg”>/div>
+        </div>
+      <scroll-scene> </scroll-scene>
+      <scroll-scene> </scroll-scene>
+      <scroll-scene> </scroll-scene>
+      <scroll-scene> </scroll-scene>
       <scroll-scene> </scroll-scene>
     </div>
   </scroll-scene>
