--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -191,7 +191,7 @@ layout: page
       <div class="graphic sticky-top"><<img src=”https://aweymo.github.io/losttacoma/objects/coe_abattoire_17.jpeg”></div>
       <div class="graphic sticky-top"><<img src=”https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg”></div>
         </div>
-      <scroll-scene><img src=”/objects/coe_abattoire_17.jpeg”</scroll-scene>
+      <scroll-scene> </scroll-scene>
       <scroll-scene> </scroll-scene>
       <scroll-scene> </scroll-scene>
       <scroll-scene> </scroll-scene>
