--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -191,11 +191,11 @@ layout: page
       <div class="graphic sticky-top"><<img src=”https://aweymo.github.io/losttacoma/objects/coe_abattoire_17.jpeg”></div>
       <div class="graphic sticky-top"><<img src=”https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg”></div>
         </div>
-      <scroll-scene> </scroll-scene>
-      <scroll-scene> </scroll-scene>
-      <scroll-scene> </scroll-scene>
-      <scroll-scene> </scroll-scene>
-      <scroll-scene> </scroll-scene>
+      <scroll-scene> 
+      <scroll-scene> 
+      <scroll-scene> 
+      <scroll-scene> 
+      <scroll-scene> 
     </div>
   </scroll-scene>
 
