--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -186,10 +186,30 @@ layout: page
       <scroll-scene>Please visit the library's image archive here.</scroll-scene>
     </div>
     <div class="scroller-visual scroller-container__column">
-      <div class="graphic sticky-top"> <img src=”https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg” alt="Pacific Refridgeration"> </div>
-      <div class="graphic sticky-top"> <img src=”https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg” alt="Talmud Torah"></div>
-      <div class="graphic sticky-top"> <img src=”https://aweymo.github.io/losttacoma/objects/coe_abattoire_17.jpeg” alt="Carsten Abattoire"></div>
-      <div class="graphic sticky-top"> <img src=”https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg” alt="Buffelen Apartments"></div>
+      <div class="graphic sticky-top"> 
+        <img 
+             src=”https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg” 
+             width="100"
+             alt="Pacific Refridgeration"> 
+      </div>
+      <div class="graphic sticky-top"> 
+        <img 
+             src=”https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg”
+             width="100"
+             alt="Talmud Torah">
+      </div>
+      <div class="graphic sticky-top"> 
+        <img 
+             src=”https://aweymo.github.io/losttacoma/objects/coe_abattoire_17.jpeg” 
+             width="100"
+             alt="Carsten Abattoire">
+      </div>
+      <div class="graphic sticky-top"> 
+        <img 
+             src=”https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg” 
+             width="100"
+             alt="Buffelen Apartments">
+      </div>
         </div>
       <scroll-scene> 
       <scroll-scene> 
