--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -190,26 +190,29 @@ layout: page
         <img 
              src=”https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg” 
              width="100"
-             alt="Pacific Refridgeration"> 
+             alt="Pacific Refridgeration"
+             > 
       </div>
       <div class="graphic sticky-top"> 
         <img 
              src=”https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg”
              width="100"
-             alt="Talmud Torah">
+             alt="Talmud Torah"
+             >
       </div>
       <div class="graphic sticky-top"> 
         <img 
              src=”https://aweymo.github.io/losttacoma/objects/coe_abattoire_17.jpeg” 
              width="100"
-             alt="Carsten Abattoire">
+             alt="Carsten Abattoire"
+             >
       </div>
       <div class="graphic sticky-top"> 
         <img 
              src=”https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg” 
              width="100"
-             alt="Buffelen Apartments">
-      </div>
+             alt="Buffelen Apartments"
+             >
         </div>
       <scroll-scene> 
       <scroll-scene> 
