--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -164,7 +164,7 @@ layout: page
 
     container.addEventListener('scroll-scene-exit', (event) => {
       if (event.target === container) {
-        graphic.textContent = 'Waiting to be activated';
+        graphic.textContent = 'Scroll Down';
       }
     });
   </script>
