--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -85,8 +85,8 @@ layout: page
       display: flex;
       justify-content: center;
       font-size: 1.5rem;
-      height: 1080px;
-      width: 1920%;
+      height: 648px;
+      width: 1152px;
       top: 25%;
       position: fixed;
     }
@@ -189,28 +189,28 @@ layout: page
       <div class="graphic sticky-top"> 
         <img 
              src=”https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg” 
-             width="1920"
+             width="1152"
              alt="Pacific Refridgeration"
              > 
       </div>
       <div class="graphic sticky-top"> 
         <img 
              src=”https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg”
-             width="1920"
+             width="1152"
              alt="Talmud Torah"
              >
       </div>
       <div class="graphic sticky-top"> 
         <img 
              src=”https://aweymo.github.io/losttacoma/objects/coe_abattoire_17.jpeg” 
-             width="1920"
+             width="1152"
              alt="Carsten Abattoire"
              >
       </div>
       <div class="graphic sticky-top"> 
         <img 
              src=”https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg” 
-             width="1920"
+             width="1152"
              alt="Buffelen Apartments"
              >
         </div>
