--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -188,28 +188,28 @@ layout: page
     <div class="scroller-visual scroller-container__column">
       <div class="graphic sticky-top"> 
         <img 
-             src=”https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg” 
+             src=”https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.JPEG” 
              width="1152"
              alt="Pacific Refridgeration"
              > 
       </div>
       <div class="graphic sticky-top"> 
         <img 
-             src=”https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg”
+             src=”https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.JPEG”
              width="1152"
              alt="Talmud Torah"
              >
       </div>
       <div class="graphic sticky-top"> 
         <img 
-             src=”https://aweymo.github.io/losttacoma/objects/coe_abattoire_17.jpeg” 
+             src=”https://aweymo.github.io/losttacoma/objects/coe_abattoire_17.JPEG” 
              width="1152"
              alt="Carsten Abattoire"
              >
       </div>
       <div class="graphic sticky-top"> 
         <img 
-             src=”https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg” 
+             src=”https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.JPEG” 
              width="1152"
              alt="Buffelen Apartments"
              >
