--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -92,7 +92,7 @@ layout: page
     }
 
     .sticky-top {
-      z-index: 1020 !important;
+      z-index: 1152 !important;
     }
 
     @media screen and (min-width: 34em) {
@@ -186,6 +186,7 @@ layout: page
       <scroll-scene>Please visit the library's image archive here.</scroll-scene>
     </div>
     <div class="scroller-visual scroller-container__column">
+      </div>
       <div class="graphic sticky-top"> 
         <img 
              src=”https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.JPEG” 
