--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -164,7 +164,7 @@ layout: page
 
     container.addEventListener('scroll-scene-exit', (event) => {
       if (event.target === container) {
-        graphic.textContent = 'Scroll Down';
+        graphic.textContent = '';
       }
     });
   </script>
@@ -186,7 +186,6 @@ layout: page
       <scroll-scene>Please visit the library's image archive here.</scroll-scene>
     </div>
     <div class="scroller-visual scroller-container__column">
-      </div>
       <div class="graphic sticky-top"> 
         <img 
              src=”https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.JPEG” 
