--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -3,225 +3,219 @@
 layout: page
 ---
 {%- assign items = site.data[site.metadata] -%}
-  <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>scroll-scene progress</title>
-  <style>
-    html {
-      box-sizing: border-box;
-    }
-
-    *,
-    *:before,
-    *:after {
-      box-sizing: inherit;
-    }
-
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-        Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-      margin: 0 0 75vh;
-    }
-
-    h1 {
-      font-size: 1.5rem;
-      font-weight: 700;
-      margin-left: auto;
-      margin-right: auto;
-      max-width: 600px;
-      padding-left: 1rem;
-      padding-right: 1rem;
-    }
-
-    .intro-text {
-      margin-bottom: 30vh;
-    }
-
-    .intro-text p {
-      line-height: 1.5;
-      margin-left: auto;
-      margin-right: auto;
-      max-width: 600px;
-      padding-left: 1rem;
-      padding-right: 1rem;
-    }
-
-    .scroller-container {
-      margin-bottom: 75vh;
-      padding-left: -1rem;
-      padding-right: -1rem;
-    }
-
-    .scroller-container__column {
-      width: 100%;
-    }
-
-    .scroller-items {
-      width: 100%;
-    }
-
-    .scroller-items > scroll-scene {
-      align-items: left;
-      font-family: roboto;
-      background-color: white;
-      color: black;
-      display: flex;
-      font-size: 1.50rem;
-      text-align: left;
-      justify-content: left;
-      width: 100%;
-    }
-
-    .scroller-items > scroll-scene.active {
-      background-color: white;
-    }
-
-    .graphic {
-      background-color: white(0, 0%, 0%, 0%);
-      align-items: center;
-      display: flex;
-      justify-content: center;
-      font-size: 1.5rem;
-      height: 648px;
-      width: 1152px;
-      top: 25%;
-      position: fixed;
-    }
-
-    .sticky-top {
-      z-index: 1152 !important;
-    }
-
-    @media screen and (min-width: 34em) {
-      .scroller-container {
-        display: flex;
-        position: relative;
+ <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>About</title>
+    <style>
+      html {
+        box-sizing: border-box;
       }
 
-      .scroller-items {
-        width: 450px;
+      *,
+      *:before,
+      *:after {
+        box-sizing: inherit;
+      }
+
+      body {
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+          Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        margin: 0;
+      }
+
+      h1 {
+        font-size: 1.5rem;
+        font-weight: 700;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 600px;
+        padding-left: 1rem;
+        padding-right: 1rem;
+      }
+
+      .intro-text {
+        margin-bottom: 35vh;
+      }
+
+      .intro-text p {
+        line-height: 1.5;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 600px;
+        padding-left: 1rem;
+        padding-right: 1rem;
+      }
+
+      .midpoint {
+        border-top: 1px dotted white;
+        height: 0px;
+        left: 0px;
+        position: fixed;
+        top: 67%;
+        width: 100%;
+        z-index: 9000;
+      }
+
+      .scroller-container {
+        margin-bottom: 75vh;
+        padding-left: -1rem;
+        padding-right: -1rem;
       }
 
       .scroller-container__column {
-        padding-right: 1rem;
-        padding-left: 1rem;
-        position: relative;
+        width: 100%;
       }
 
-      .sticky-top {
-        position: -webkit-sticky;
-        position: sticky;
-        top: 12.5%;
+      .scroller-items {
+        width: 100%;
+      }
+
+      .scene {
+        align-items: left;
+        font-family: Roboto;
+        background-color: white;
+        color: black;
+        display: flex;
+        font-size: 1.5rem;
+        justify-content: left;
+        margin: 2.5rem 0;
+        width: 100%;
+      }
+
+      .scene.is-active {
+        background-color: white;
+      }
+
+      .scroller-visual {
+        margin: 2.5rem 0;
       }
 
       .graphic {
-        height: 75vh;
+        background-color: hsla(0, 0%, 83%, 75%);
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        font-size: 1.5rem;
+        height: 300px;
+        width: 100%;
+        top: 25%;
+        position: fixed;
       }
-    }
 
-    .midpoint {
-      border-top: 0px dotted white;
-      height: 0px;
-      left: 0px;
-      position: fixed;
-      width: 100%;
-      z-index: 9000;
-    }
-  </style>
-  <script src="https://unpkg.com/scroll-scene-element/dist/scroll-scene-element.js" type="module"></script>
-  <script type="module">
-    const offset = 0.5;
-
-    function getRandomIntInclusive(min, max) {
-      min = Math.ceil(min);
-      max = Math.floor(max);
-      return Math.floor(Math.random() * (max - min + 1)) + min; // The maximum is inclusive and the minimum is inclusive
-    }
-
-    const container = document.querySelector('.scroller-container');
-    const graphic = document.querySelector('.graphic');
-    const scenesContainer = document.querySelector('.scroller-items');
-    const scenes = Array.from(scenesContainer.querySelectorAll('scroll-scene'));
-
-    scenes.forEach((scene) => {
-      scene.style.padding = getRandomIntInclusive(200, 400) + 'px 0';
-    })
-
-    document.querySelector('.midpoint').style.top = (1 - offset) * 100 + '%';
-
-    scenesContainer.addEventListener('scroll-scene-enter', ({ detail }) => {
-      const index = scenes.indexOf(detail.element);
-      detail.element.classList.add('active');
-      graphic.textContent = '';
-    });
-
-    scenesContainer.addEventListener('scroll-scene-exit', ({ detail }) => {
-      detail.element.classList.remove('active');
-    });
-
-    container.addEventListener('scroll-scene-exit', (event) => {
-      if (event.target === container) {
-        graphic.textContent = '';
+      .sticky-top {
+        z-index: 1020 !important;
       }
-    });
-  </script>
-</head>
-<body>
-  <h1>About</h1>
-  <div class="intro-text">
-    <p>
-    This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection, constituting 116 of the total 560 blueprints across 26 locations.
-    </p>
-  </div>
 
-  <scroll-scene class="scroller-container">
-    <div class="scroller-items scroller-container__column">
-      <scroll-scene>The technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.</scroll-scene>
-      <scroll-scene>The scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal.</scroll-scene>
-      <scroll-scene>The technical drawings have been reformatted and restored for legibility.</scroll-scene>
-      <scroll-scene>Restoration, arrangement and description was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room.</scroll-scene>
-      <scroll-scene>Please visit the library's image archive here.</scroll-scene>
-    </div>
-    <div class="scroller-visual scroller-container__column">
-      <div class="graphic sticky-top"> 
-        <img 
-             src=”https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.JPEG” 
-             width="1152"
-             alt="Pacific Refridgeration"
-             > 
-      </div>
-      <div class="graphic sticky-top"> 
-        <img 
-             src=”https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.JPEG”
-             width="1152"
-             alt="Talmud Torah"
-             >
-      </div>
-      <div class="graphic sticky-top"> 
-        <img 
-             src=”https://aweymo.github.io/losttacoma/objects/coe_abattoire_17.JPEG” 
-             width="1152"
-             alt="Carsten Abattoire"
-             >
-      </div>
-      <div class="graphic sticky-top"> 
-        <img 
-             src=”https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.JPEG” 
-             width="1152"
-             alt="Buffelen Apartments"
-             >
-        </div>
-      <scroll-scene> 
-      <scroll-scene> 
-      <scroll-scene> 
-      <scroll-scene> 
-      <scroll-scene> 
-    </div>
-  </scroll-scene>
+      @media screen and (min-width: 34em) {
+        .scroller-container {
+          display: flex;
+          position: relative;
+        }
 
-  <div class="midpoint"></div>
-</body>
+        .scroller-items {
+          width: 450px;
+        }
+
+        .scroller-container__column {
+          padding-right: 1rem;
+          padding-left: 1rem;
+          position: relative;
+        }
+
+        .sticky-top {
+          position: -webkit-sticky;
+          position: sticky;
+          top: 12.5%;
+        }
+
+        .graphic {
+          height: 75vh;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <h1>@newswire/scroller sticky example</h1>
+    <div class="intro-text">
+      <p>
+This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,constituting 116 of the total 560 blueprints across 26 locations.
+      </p>
+      </p>
+    </div>
+    <div class="scroller-container">
+      <div class="scroller-items scroller-container__column">
+        <div class="scene">The technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.</div>
+        <div class="scene">The scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal.</div>
+        <div class="scene">The technical drawings have been reformatted and restored for legibility.</div>
+        <div class="scene">Restoration, arrangement and description was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room.</div>
+        <div class="scene">Please visit the library's image archive here.</div>
+      </div>
+      <div class="scroller-visual scroller-container__column">
+        <div class="graphic sticky-top"></div>
+        <div class="scene">"https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg"</div>
+        <div class="scene">"https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg"</div>
+        <div class="scene">"https://aweymo.github.io/losttacoma/objects/coe_abattoire_17.jpeg"</div>
+        <div class="scene">"https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg"</div>
+        <div class="scene">" "</div>
+      </div>
+    </div>
+
+    <div class="midpoint"></div>
+
+    <script src="https://polyfill.io/v2/polyfill.min.js?features=IntersectionObserver"></script>
+    <script src="https://unpkg.com/stickyfilljs@2.1.0/dist/stickyfill.min.js"></script>
+    <script src="index.umd.js"></script>
+    <script>
+      function getRandomIntInclusive(min, max) {
+        min = Math.ceil(min);
+        max = Math.floor(max);
+        return Math.floor(Math.random() * (max - min + 1)) + min; //The maximum is inclusive and the minimum is inclusive
+      }
+
+      var scenes = document.querySelectorAll('.scene');
+
+      for (var i = 0; i < scenes.length; i++) {
+        const el = scenes[i];
+        el.style.padding = getRandomIntInclusive(200, 400) + 'px 0';
+      }
+
+      var offset = 3 / 4;
+
+      document.querySelector('.midpoint').style.top = (1 - offset) * 100 + '%';
+
+      var scroller = new Scroller({
+        container: document.querySelector('.scroller-container'),
+        scenes: scenes,
+        offset: offset,
+      });
+
+      var graphic = document.querySelector('.graphic');
+
+      scroller.on('scene:enter', function(d) {
+        d.element.classList.add('is-active');
+        graphic.textContent = 'Scene Graphic ' + (d.index + 1);
+      });
+
+      scroller.on('container:enter', function(d) {
+        console.log('enter:', d);
+      });
+
+      scroller.on('scene:exit', function(d) {
+        d.element.classList.remove('is-active');
+      });
+
+      scroller.on('container:exit', function(d) {
+        console.log('exit:', d);
+        graphic.textContent = 'Waiting to be activated';
+      });
+
+      scroller.init();
+
+      Stickyfill.add(document.querySelectorAll('.sticky-top'));
+    </script>
+  </body>
 </html>
+
