--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -94,7 +94,7 @@ layout: page
       }
 
       .graphic {
-        background-color: hsla(0, 0%, 83%, 75%);
+        background-color: white(0, 0%, 83%, 75%);
         align-items: center;
         display: flex;
         justify-content: center;
@@ -138,7 +138,7 @@ layout: page
     </style>
   </head>
   <body>
-    <h1>@newswire/scroller sticky example</h1>
+    <h1>About/h1>
     <div class="intro-text">
       <p>
 This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,constituting 116 of the total 560 blueprints across 26 locations.
@@ -155,10 +155,10 @@ This work is a partial representation of the Tacoma Public Library Northwest Roo
       </div>
       <div class="scroller-visual scroller-container__column">
         <div class="graphic sticky-top"></div>
-        <div class="scene">"https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg"</div>
-        <div class="scene">"https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg"</div>
-        <div class="scene">"https://aweymo.github.io/losttacoma/objects/coe_abattoire_17.jpeg"</div>
-        <div class="scene">"https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg"</div>
+        <div class="scene"><img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg"></div>
+        <div class="scene"><img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg"></div>
+        <div class="scene"><img src="https://aweymo.github.io/losttacoma/objects/coe_abattoire_17.jpeg"></div>
+        <div class="scene"><img src="https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg"></div>
         <div class="scene">" "</div>
       </div>
     </div>
