--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -50,7 +50,7 @@ layout: page
       }
 
       .midpoint {
-        border-top: 1px dotted white;
+        border-top: 0px dotted white;
         height: 0px;
         left: 0px;
         position: fixed;
@@ -95,11 +95,11 @@ layout: page
 
       .graphic {
         background-color: white(0, 0%, 83%, 75%);
-        align-items: center;
+        align-items: left;
         display: flex;
-        justify-content: center;
+        justify-content: left;
         font-size: 1.5rem;
-        height: 300px;
+        height: 648px;
         width: 100%;
         top: 25%;
         position: fixed;
@@ -147,6 +147,7 @@ This work is a partial representation of the Tacoma Public Library Northwest Roo
     </div>
     <div class="scroller-container">
       <div class="scroller-items scroller-container__column">
+        <div class="scene"></div>
         <div class="scene">The technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.</div>
         <div class="scene">The scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal.</div>
         <div class="scene">The technical drawings have been reformatted and restored for legibility.</div>
@@ -156,10 +157,11 @@ This work is a partial representation of the Tacoma Public Library Northwest Roo
       <div class="scroller-visual scroller-container__column">
         <div class="graphic sticky-top"></div>
         <div class="scene"><img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg"></div>
+        <div class="scene"></div>
         <div class="scene"><img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg"></div>
         <div class="scene"><img src="https://aweymo.github.io/losttacoma/objects/coe_abattoire_17.jpeg"></div>
         <div class="scene"><img src="https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg"></div>
-        <div class="scene">" "</div>
+        <div class="scene"></div>
       </div>
     </div>
 
