--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -80,9 +80,9 @@ layout: page
         color: black;
         display: flex;
         font-size: 1.5rem;
-        justify-content: left;
+        justify-content: center;
         margin: 2.5rem 0;
-        width: 100%;
+        width: 125%;
       }
 
       .scene.is-active {
@@ -97,10 +97,10 @@ layout: page
         background-color: white(0, 0%, 83%, 75%);
         align-items: left;
         display: flex;
-        justify-content: left;
+        justify-content: center;
         font-size: 1.5rem;
         height: 648px;
-        width: 100%;
+        width: 125%;
         top: 25%;
         position: fixed;
       }
@@ -142,15 +142,14 @@ layout: page
     <div class="intro-text">
       <p>
 This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,constituting 116 of the total 560 blueprints across 26 locations.
-      </p>
     </div>
     <div class="scroller-container">
       <div class="scroller-items scroller-container__column">
+        <div class="scene"></div>
         <div class="scene">The technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.</div>
-        <div class="scene">The scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal.</div>
-        <div class="scene">The technical drawings have been reformatted and restored for legibility.</div>
-        <div class="scene">Restoration, arrangement and description was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room.</div>
-        <div class="scene">Please visit the library's image archive here.</div>
+        <div class="scene">The scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal. The technical drawings have been reformatted and restored for legibility.</div>
+        <div class="scene">Restoration, arrangement and description was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room. Please visit the library's image archive here.</div>
+        <div class="scene"></div>
       </div>
       <div class="scroller-visual scroller-container__column">
         <div class="graphic sticky-top"></div>
