--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -142,23 +142,28 @@ layout: page
     <div class="intro-text">
       <p>
 This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,constituting 116 of the total 560 blueprints across 26 locations.
+      <p>
+The technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.
     </div>
+       <div class="scroller-visual scroller-container__column">
+       <div class="graphic sticky-top"></div>
+        <div class="scene"><img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg"></div>
+       <div class="graphic sticky-top"></div>
+        <div class="scene"><img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg"></div>
+       </div>
+      </div>
     <div class="scroller-container">
       <div class="scroller-items scroller-container__column">
-        <div class="scene 2">The technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.</div>
-        <div class="scene 3">The scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal. The technical drawings have been reformatted and restored for legibility.</div>
-        <div class="scene 4">Restoration, arrangement and description was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room. Please visit the library's image archive here.</div>
+        <div class="scene">The scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal. The technical drawings have been reformatted and restored for legibility.</div>
+        <div class="scene">Restoration, arrangement and description was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room. Please visit the library's image archive here.</div>
       </div>
+     </div>
       <div class="scroller-visual scroller-container__column">
-        <div class="graphic sticky-top"></div>
-        <div class="scene 1"><img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg"></div>
        <div class="graphic sticky-top"></div>
-        <div class="scene 2"><img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg"></div>
+        <div class="scene"><img src="https://aweymo.github.io/losttacoma/objects/coe_abattoire_17.jpeg"></div>
        <div class="graphic sticky-top"></div>
-        <div class="scene 3"><img src="https://aweymo.github.io/losttacoma/objects/coe_abattoire_17.jpeg"></div>
-       <div class="graphic sticky-top"></div>
-        <div class="scene 4"><img src="https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg"></div>
-      </div>
+        <div class="scene"><img src="https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg"></div>
+     </div>
     </div>
 
     <div class="midpoint"></div>
