--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -37,7 +37,7 @@ layout: page
       }
 
       .intro-text {
-        margin-bottom: 35vh;
+        margin-bottom: 10vh;
       }
 
       .intro-text p {
@@ -60,7 +60,7 @@ layout: page
       }
 
       .scroller-container {
-        margin-bottom: 75vh;
+        margin-bottom: 10vh;
         padding-left: -1rem;
         padding-right: -1rem;
       }
@@ -81,8 +81,8 @@ layout: page
         display: flex;
         font-size: 1.5rem;
         justify-content: center;
-        margin: 2.5rem 0;
-        width: 125%;
+        margin: 1rem 0;
+        width: 75%;
       }
 
       .scene.is-active {
@@ -90,12 +90,12 @@ layout: page
       }
 
       .scroller-visual {
-        margin: 2.5rem 0;
+        margin: 1rem 0;
       }
 
       .graphic {
         background-color: white(0, 0%, 83%, 75%);
-        align-items: left;
+        align-items: center;
         display: flex;
         justify-content: center;
         font-size: 1.5rem;
