--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -54,7 +54,7 @@ layout: page
         height: 0px;
         left: 0px;
         position: fixed;
-        top: 67%;
+        top: 50%;
         width: 100%;
         z-index: 9000;
       }
@@ -80,9 +80,9 @@ layout: page
         color: black;
         display: flex;
         font-size: 1.5rem;
-        justify-content: center;
+        justify-content: left;
         margin: 1rem 0;
-        width: 75%;
+        width: 100%;
       }
 
       .scene.is-active {
@@ -99,8 +99,8 @@ layout: page
         display: flex;
         justify-content: center;
         font-size: 1.5rem;
-        height: 50px;
-        width: 125%;
+        height: 100px;
+        width: 100%;
         top: 25%;
         position: fixed;
       }
@@ -145,23 +145,17 @@ This work is a partial representation of the Tacoma Public Library Northwest Roo
       <p>
 The technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.
     </div>
-       <div class="scroller-visual scroller-container__column">
-       <div class="graphic sticky-top"></div>
-        <div class="scene"><img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg"></div>
-       <div class="graphic sticky-top"></div>
-        <div class="scene"><img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg"></div>
-       </div>
-      </div>
     <div class="scroller-container">
       <div class="scroller-items scroller-container__column">
         <div class="scene">The scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal. The technical drawings have been reformatted and restored for legibility.</div>
         <div class="scene">Restoration, arrangement and description was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room. Please visit the library's image archive here.</div>
       </div>
      </div>
-      <div class="scroller-visual scroller-container__column">
+       <div class="scroller-visual scroller-container__column">
        <div class="graphic sticky-top"></div>
+        <div class="scene"><img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg"></div>
+        <div class="scene"><img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg"></div>
         <div class="scene"><img src="https://aweymo.github.io/losttacoma/objects/coe_abattoire_17.jpeg"></div>
-       <div class="graphic sticky-top"></div>
         <div class="scene"><img src="https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg"></div>
      </div>
     </div>
