--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -3,216 +3,315 @@
 layout: page
 ---
 {%- assign items = site.data[site.metadata] -%}
- <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>About</title>
-    <style>
-      html {
-        box-sizing: border-box;
-      }
+ <!DOCTYPE html>
+<head>
+  <meta charset="utf-8">
+  <script src="https://d3js.org/d3.v3.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/noframework.waypoints.js"></script>
+  <style>
+    @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,600');
+  *{
+    margin:0;
+    padding:0;
+  }
+  html,
+  body{
+     height: 100%;
+     padding: 0;
+     scroll-behavior: smooth;
+     background: #f7f5f2;
+     color: #666;
+     font-family: 'Open Sans', sans-serif;
+     font-weight: 300;
+  }
+  h2{
+    line-height: 1.25;
+    padding-top: 45px;
+    font-weight: 300;
+  }
+  svg{
+    padding: 20px;
+  }
+  text{
+    font-size: 10px;
+  }
+  strong{
+    font-weight: 600;
+  }
+  #graphic {
+    max-width:  1440px;
+    width: 100%;
+    position:   relative; 
+    height:  100%;
+    position:  relative; 
+    margin:auto;
+  }
+  .container {
+    height: 100%;
+    max-width: 440px;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    height: 100%;
+    line-height: 1.5;
+    left: 500px;
+  }
+  .container div {
+    height: 100%;
+    display: block;
+    padding: 0 45px;
+  }
+  .fixed {
+    position: fixed;
+    max-width: 500px;
+    height: 500px;
+    top: 50px;
+  }
+  </style>
+</head>
 
-      *,
-      *:before,
-      *:after {
-        box-sizing: inherit;
-      }
-
-      body {
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-          Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        margin: 0;
-      }
-
-      h1 {
-        font-size: 1.5rem;
-        font-weight: 700;
-        margin-left: auto;
-        margin-right: auto;
-        max-width: 600px;
-        padding-left: 1rem;
-        padding-right: 1rem;
-      }
-
-      .intro-text {
-        margin-bottom: 10vh;
-      }
-
-      .intro-text p {
-        line-height: 1.5;
-        margin-left: auto;
-        margin-right: auto;
-        max-width: 600px;
-        padding-left: 1rem;
-        padding-right: 1rem;
-      }
-
-      .midpoint {
-        border-top: 0px dotted white;
-        height: 0px;
-        left: 0px;
-        position: fixed;
-        top: 50%;
-        width: 100%;
-        z-index: 9000;
-      }
-
-      .scroller-container {
-        margin-bottom: 10vh;
-        padding-left: -1rem;
-        padding-right: -1rem;
-      }
-
-      .scroller-container__column {
-        width: 100%;
-      }
-
-      .scroller-items {
-        width: 100%;
-      }
-
-      .scene {
-        align-items: left;
-        font-family: Roboto;
-        background-color: white;
-        color: black;
-        display: flex;
-        font-size: 1.5rem;
-        justify-content: left;
-        margin: 1rem 0;
-        width: 100%;
-      }
-
-      .scene.is-active {
-        background-color: white;
-      }
-
-      .scroller-visual {
-        margin: 1rem 0;
-      }
-
-      .graphic {
-        background-color: white(0, 0%, 83%, 75%);
-        align-items: center;
-        display: flex;
-        justify-content: center;
-        font-size: 1.5rem;
-        height: 100px;
-        width: 100%;
-        top: 25%;
-        position: fixed;
-      }
-
-      .sticky-top {
-        z-index: 1020 !important;
-      }
-
-      @media screen and (min-width: 34em) {
-        .scroller-container {
-          display: flex;
-          position: relative;
-        }
-
-        .scroller-items {
-          width: 450px;
-        }
-
-        .scroller-container__column {
-          padding-right: 1rem;
-          padding-left: 1rem;
-          position: relative;
-        }
-
-        .sticky-top {
-          position: -webkit-sticky;
-          position: sticky;
-          top: 12.5%;
-        }
-
-        .graphic {
-          height: 75vh;
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <h1>About</h1>
-    <div class="intro-text">
-      <p>
-This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,constituting 116 of the total 560 blueprints across 26 locations.
-      <p>
-The technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.
+<body>
+  <div id="graphic">
+  <div class="container">
+    <div id="div1">
+      <h2>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection, constituting 116 of the total 560 blueprints across 26 locations.</h2>
     </div>
-    <div class="scroller-container">
-      <div class="scroller-items scroller-container__column">
-        <div class="scene">The scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal. The technical drawings have been reformatted and restored for legibility.</div>
-        <div class="scene">Restoration, arrangement and description was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room. Please visit the library's image archive here.</div>
-      </div>
-     </div>
-       <div class="scroller-visual scroller-container__column">
-       <div class="graphic sticky-top"></div>
-        <div class="scene"><img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg"></div>
-        <div class="scene"><img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg"></div>
-        <div class="scene"><img src="https://aweymo.github.io/losttacoma/objects/coe_abattoire_17.jpeg"></div>
-        <div class="scene"><img src="https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg"></div>
-     </div>
+    <div id="div2">
+      <h2>The technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.</h2>
+      <p></p>
     </div>
+    <div id="div4">
+      <h2>The scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal.</h2>
+    </div>
+    <div id="div6">
+      <h2>The technical drawings have been reformatted and restored for legibility.<br><br>Restoration, arrangement and description was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room.</h2>
+    </div>
+    
+  </div>
 
-    <div class="midpoint"></div>
 
-    <script src="https://polyfill.io/v2/polyfill.min.js?features=IntersectionObserver"></script>
-    <script src="https://unpkg.com/stickyfilljs@2.1.0/dist/stickyfill.min.js"></script>
-    <script src="index.umd.js"></script>
-    <script>
-      function getRandomIntInclusive(min, max) {
-        min = Math.ceil(min);
-        max = Math.floor(max);
-        return Math.floor(Math.random() * (max - min + 1)) + min; //The maximum is inclusive and the minimum is inclusive
-      }
+  <!-- svg -->
+  <div class="fixed"><svg id="viz" width="100%" height="100%"></svg></div>
 
-      var scenes = document.querySelectorAll('.scene');
+</div><!-- /graphic -->
+  
+  
+  <script>
 
-      for (var i = 0; i < scenes.length; i++) {
-        const el = scenes[i];
-        el.style.padding = getRandomIntInclusive(200, 400) + 'px 0';
-      }
+		//svg
+    let svg = d3.select("svg");
 
-      var offset = 3 / 4;
 
-      document.querySelector('.midpoint').style.top = (1 - offset) * 100 + '%';
+    //svg width and height
+    svg.attr('width',500)
+        .attr('height',500)
 
-      var scroller = new Scroller({
-        container: document.querySelector('.scroller-container'),
-        scenes: scenes,
-        offset: offset,
+
+    //set up grid spacing
+    let spacing = 40;
+    let rows = 10;
+    let column = 10;
+    let randnum = (min,max) => Math.round( Math.random() * (max-min) + min );
+
+
+
+    //Create an array of objects
+    let our_data = d3.range(20).map(i => 
+    ({ 'device': i < 5 ? 'ios' : 'android', 
+        'city': i < 3 ? 'San Diegan' : 'Out of towners', 
+        'age': randnum(25, 65)
+    }));
+
+
+    //create group and join our data to that group
+    let group = svg.selectAll('g')
+      .data(our_data)
+      .enter()
+      .append("g")
+
+
+    //create rectangles
+    let rects = group.append("rect")
+
+
+    //city data
+    d3.selectAll('g')
+      .append("text")
+      .text( (d) => d["city"])
+      .attr("fill", "gray")
+      .attr("class", "city")
+      .attr("dx", -500)
+
+
+
+    //age data
+    d3.selectAll('g')
+      .append("text")
+      .text( (d) => d["age"] )
+      .attr("fill", "#fff")
+      .attr("class", "age")
+      .attr("dx", -500)
+
+
+
+
+
+
+
+
+    // square grid
+    let grid = () =>{
+      rects
+        .transition()
+        .delay((d, i) => 10 * i)
+        .duration(600)
+        .ease("elastic")
+        .attr("width", 20)
+        .attr("height", 20)
+        .attr("rx", 5)
+        .attr("ry", 5)
+        .attr("x", (d, i) => i % column * spacing)
+        .attr("y", (d, i) => Math.floor(i / 10) % rows * spacing)
+        .attr("fill", (d, i) => (i < 40 ? "#394147" : "#99c125"))
+        .attr("opacity", "1")
+    }
+
+
+
+    //circle grid
+    let grid2 = () =>{
+      rects
+        .transition()
+        .delay((d, i) => 10 * i)
+        .duration(600)
+        .ease("elastic")
+        .attr("width", 20)
+        .attr("height", 20)
+        .attr("rx", "50%")
+        .attr("ry", "50%")
+        .attr("x", (d, i) => i % column * spacing)
+        .attr("y", (d, i) => Math.floor(i / 10) % rows * spacing)
+        .attr("fill", (d, i) => (i < 8 ? "none" : "#99c125"))
+    }
+
+
+    //divide
+    let divide = () =>{
+      rects
+        .transition()
+        .delay((d, i) => 10 * i)
+        .duration(600)
+        .ease("elastic")
+        .attr("width", 10)
+        .attr("height", 10)
+        .attr("rx", 0)
+        .attr("ry", 0)
+        .attr("x", (d, i) => d['device'] == "ios" ? randnum(100, 150) :  randnum(300, 350))
+        .attr("y", (d, i) => i * 20)
+        .attr("fill", (d, i) => d['device'] == "ios" ? "#394147": "#99c125")
+        .attr("opacity", (d,i)=> i < 12 ? 1 : 0 )//only show 12 people
+
+
+
+        //age
+        d3.selectAll('text.age')
+          .transition()
+          .delay( (d,i) => 40*i ) 
+          .duration(900)
+          .ease('elastic')
+          .attr("dx", -500)
+
+
+        //city
+        d3.selectAll('text.city')
+          .transition()
+          .delay( (d,i) => 40*i ) 
+          .duration(900)
+          .ease('elastic')
+          .attr("dx", -500)
+    }
+
+
+
+
+
+    //bar cart
+    let barChart = () => {
+      rects
+        .attr("rx", 0 )
+        .attr("ry", 0 )
+        .transition()
+        .delay( (d,i) => 20*i ) 
+        .duration(900)
+        .ease('elastic')//linear, quad, cubic, sin, exp, circle, elastic, back, bounce
+        .attr("x", (d,i) => 150 )
+        .attr("y", (d,i) => i * 17 )
+        .attr("width", (d,i) => d["age"])
+        .attr("height", (d,i) => 15)
+        .attr("fill", (d, i) => (i < 3 ? "#99c125" : "#394147"))
+        .attr("opacity", 1)
+        .attr("transform", "translate(0,0) rotate(0)")
+        .attr("opacity", (d,i)=> i < 12 ? 1 : 0 )//only show 12 people
+
+
+      //age text
+      d3.selectAll('text.age')
+        .transition()
+        .delay( (d,i) => 20*i ) 
+        .duration(900)
+        .ease('elastic')
+        //align text right
+        .attr("text-anchor", "start")
+        .attr("dx", 160)
+        .attr("dy", (d,i)=> (i * 17) + 12)
+        .attr("opacity", (d,i)=> i < 12 ? 1 : 0 )//nly show 12 people
+
+
+
+      //city text
+      d3.selectAll('text.city')
+        .transition()
+        .delay( (d,i) => 20*i ) 
+        .duration(900)
+        .ease('elastic')
+        //align text left
+        .attr("text-anchor", "end")
+        .attr("dx", 140)
+        .attr("dy", (d,i)=> (i * 17) + 12)
+        .attr("opacity", (d,i)=> i < 12 ? 1 : 0 )//only show 12 people
+
+
+    }
+
+
+
+
+    //waypoints scroll constructor
+    function scroll(n, offset, func1, func2){
+      return new Waypoint({
+        element: document.getElementById(n),
+        handler: function(direction) {
+           direction == 'down' ? func1() : func2();
+        },
+        //start 75% from the top of the div
+        offset: offset
       });
+    };
 
-      var graphic = document.querySelector('.graphic');
 
-      scroller.on('scene:enter', function(d) {
-        d.element.classList.add('is-active');
-        graphic.textContent = 'Scene Graphic ' + (d.index + 1);
-      });
 
-      scroller.on('container:enter', function(d) {
-        console.log('enter:', d);
-      });
+    //triger these functions on page scroll
+    new scroll('div2', '75%', grid2, grid);
+    new scroll('div4', '75%', divide, grid);
+    new scroll('div6', '75%', barChart, divide);
 
-      scroller.on('scene:exit', function(d) {
-        d.element.classList.remove('is-active');
-      });
 
-      scroller.on('container:exit', function(d) {
-        console.log('exit:', d);
-        graphic.textContent = 'Waiting to be activated';
-      });
 
-      scroller.init();
+    //start grid on page load
+    grid();
+ 
 
-      Stickyfill.add(document.querySelectorAll('.sticky-top'));
-    </script>
-  </body>
-</html>
+  </script>
+</body>
 
