--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -41,3 +41,6 @@ layout: page
     <img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg" alt="Pacific Refridgeration">
   </div>
 </div>
+
+</body>
+</html>
