--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -15,8 +15,8 @@ layout: page
 .column {
   float: left;
   width: 25%;
-  padding: 10px;
-  height: 300px; 
+  padding: 50px;
+  height: 500px; 
 }
 
 /* Clear floats after the columns */
@@ -63,7 +63,7 @@ layout: page
     <p>Please visit the library's image archive here.</p>
   </div>
   <div class="column" style="background-color:#FFFFFF;">
-    <img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg" alt="Pacific Refridgeration">
+    <img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg" alt="Talmud Torah Synagogue">
   </div>
 </div>
 
