--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -16,7 +16,7 @@ layout: page
   float: left;
   width: 25%;
   padding: 100x;
-  height: 600px; 
+  height: 900px; 
 }
   
 .row:after {
@@ -50,7 +50,7 @@ layout: page
     </p>Technical drawings have been reformatted and restored for legibility.</p>
   </div>
   <div class="column" style="background-color:#FFFFFF;">
-    <img src="https://aweymo.github.io/losttacoma/objects/coe_abattoire_17.jpeg" alt="Carstens Abattoire">
+    <img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg" alt="Pacific Refridgeration">
   </div>
 </div>
   
