--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -15,8 +15,8 @@ layout: page
 .column {
   float: left;
   width: 25%;
-  padding: 100x;
-  height: 900px; 
+  padding: 100px;
+  height: 1100px; 
 }
   
 .row:after {
