--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -36,7 +36,8 @@ layout: page
     <br>
     <br>
     <br>
-    <p>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection, constituting 116 of the total 560 blueprints across 26 locations</p>
+    <h2>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,<h2> 
+    <h3>constituting 116 of the total 560 blueprints across 26 locations</h3>
     <br>
     <p>The technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.<p>
   </div>
@@ -53,7 +54,7 @@ layout: page
     <br>
     <br>
     <br>
-    <p>The scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal.</p>
+    <h3>The scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal.</h3>
     <br>
     </p>Technical drawings have been reformatted and restored for legibility.</p>
   </div>
@@ -70,7 +71,7 @@ layout: page
     <br>
     <br>
     <br>
-    <p>Restoration, arrangement and description was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room.<p>
+    <h3>Restoration, arrangement and description was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room.</h3>
     <br>
     <p>Please visit the library's image archive here.</p>
   </div>
