--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -30,12 +30,10 @@ layout: page
 
 <div class="row">
   <div class="column" style="background-color:#FFFFFF;">
- <br>
     <br>
+    <h3>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection, constituting 116 of the total 560 blueprints across 26 locations<h3> 
     <br>
-    <h4>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection, constituting 116 of the total 560 blueprints across 26 locations<h4> 
-    <br>
-    <p>The technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.<p>
+    <p>Technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.<p>
   </div>
   <div class="column" style="background-color:#FFFFFF;">
     <img src="https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg" alt="Buffelen Apertments">
@@ -45,10 +43,9 @@ layout: page
   <div class="row">
   <div class="column" style="background-color:#FFFFFF;">
     <br>
+    <h3>The scans of the blueprints were not performed by the Tacoma Public Library, and some cropping and levels of the image files are not ideal.<h3>
     <br>
-    <h4>The scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal.<h4>
-    <br>
-    </p>Technical drawings have been reformatted and restored for legibility.</p>
+    </p>Images have been reformatted and restored for legibility.</p>
   </div>
   <div class="column" style="background-color:#FFFFFF;">
     <img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg" alt="Pacific Refridgeration">
@@ -58,8 +55,7 @@ layout: page
     <div class="row">
   <div class="column" style="background-color:#FFFFFF;">
     <br>
-    <br>
-    <h4>Restoration, arrangement and description was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room.<h4>
+    <h3>Restoration, arrangement and description was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room.<h3>
     <br>
     <p>Please visit the library's image archive here.</p>
   </div>
